# ghdash

./: .gitignore  CHANGELOG.md  Cargo.toml  PRLOG.md  README.md  cliff.toml  release.toml  renovate.json
.circleci/: config.yml
.github/: CODEOWNERS
crates/ghdash/: CHANGELOG.md  Cargo.toml  release.toml
crates/ghdash/src/: lib.rs
crates/ghdash/tests/cmd/: version.trycmd
src/: cli.rs  config.rs  dashboard.rs  error.rs  lib.rs  log.rs  logging.rs  main.rs
src/cli/: cli.rs  config.rs  main.rs
src/gha/: main.rs
tests/: cli_tests.rs  with_zipkin.rs
tests/cmd/: help.trycmd  run.trycmd  version.trycmd
tests/logging/: debug.trycmd  info.trycmd  trace.trycmd
tests/with_zipkin/: run.trycmd
