[workspace]
members = ["crates/ghdash"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Jeremiah Russell <jrussell@jerus.ie>"]
rust-version = "1.81"
repository = "https://github.com/jerusdp/ghdash"

[workspace.dependencies]
anyhow = "1.0.100"
bollard = "0.19.4"
clap = { version = "4.5.53", features = ["derive", "cargo"] }
clap-verbosity-flag = "3.0.4"
comfy-table = "7.1.4"
confy = "0.6.1"
log = "0.4.29"
opentelemetry = "0.29.1"
opentelemetry-zipkin = { version = "0.29.0", features = ["reqwest-client"], default-features = false }
opentelemetry_sdk = { version = "0.29.0", features = ["tokio", "rt-tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
thiserror = "2.0.18"
tracing = "0.1.41"
tracing-opentelemetry = "0.30.0"
tracing-subscriber = { version = "0.3.19", features = ["std", "env-filter"] }
octocrate = { version = "2.2.0", features = ["pulls", "issues", "repos", "apps"] }
futures-util = "0.3.31"
reqwest = "0.12.28"
trycmd = "0.15.10"

[workspace.lints.clippy]
uninlined-format-args = "warn"
